Have some more framework laid down.

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,6 +9,8 @@ TARGET := libpmwdispatch.a
 
 all: $(TARGET)
 
+	$(MV) $(TARGET) ../lib/
+
 clean:
 
 	$(RM) $(OBJECT) $(TARGET)
@@ -20,3 +22,7 @@ $(TARGET): $(OBJECT)
 dispatch.o: dispatch.cpp ../include/pmw_dispatch/dispatch.h
 
 	$(COMPILE) dispatch.cpp
+
+internal.o: internal.cpp internal.h ../include/pmw_dispatch/dispatch.h
+
+	$(COMPILE) internal.cpp
